--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: ttshivhu <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/05/31 12:28:51 by ttshivhu          #+#    #+#              #
-#*   Updated: 2017/08/06 18:23:24 by ttshivhu         ###   ########.fr       *#
+#*   Updated: 2018/08/25 18:50:45 by ttshivhu         ###   ########.fr       *#
 #                                                                              #
 # **************************************************************************** #
 
@@ -25,16 +25,15 @@ SRCS = ft_memset.c ft_bzero.c ft_memccpy.c ft_memcpy.c ft_memmove.c ft_memchr.c 
 	   ft_dlstdelstr.c ft_dlstnew.c ft_dlstsize.c ft_dlstaddback.c ft_dlstgethead.c ft_dlstremoveif.c \
 	   ft_dlstadd.c ft_dlstgettail.c ft_dlstremovenode.c \
 
-FLAG = -Wall -Werror -Wextra
+CFLAGS = -Wall -Werror -Wextra
 
 OBJ = $(SRCS:.c=.o)
 
 all: $(NAME)
 
-$(NAME):
-	@gcc $(FLAG) -c $(SRCS)
+$(NAME): $(OBJ)
 	@ar rc $(NAME) $(OBJ)
-	@ranlib $(NAME)
+	ranlib $(NAME)
 
 clean:
 	@/bin/rm -f $(OBJ)
